Version 2.0.0
----------------------------------------------------------------
7 March 2008
+ Fixed fc_convert table check typo.
+ File classification made deity only

5 March 2008
+ Extra permission checks added.
+ User must have rights to add folders or upload new files.

26 February 2008
+ Small edit to classify template for error messages.

22 February 2008
+ Fixed image popup link address

21 February 2008
+ Fixed multimedia popup outside of mod_rewrite (thanks Verdon)
+ Added Italian translation

20 February 2008
+ Settings tab is now deity only
+ Fixed instances of error messages not appearing on upload
+ Enforcing folder permissions on item views.
+ Moved some functions out of Cabinet to Forms hopefully to save some
  memory.
+ Allowed file types now look at extensions. Mime types are checked by
  the new PHPWS_File methods.
+ Deities can now choose the allowed file types from a new tab.
+ Media, Images, Docs pull their allowed types from the phpws_settings
  now.
+ Changed over mime checking to new phpws_file methods.
+ Classify working with new file type code.
+ Clip ability now requires fc permission.
+ Video types moved to config.php. video_types.php removed
+ known_types.php file added to inc directory.

8 February 2008
+ Broke out image resize so default parent link setting would work
  again. 
+ Caption function grabs tag with linked status sent now.
+ Permissions checked against file cabinet now for posting files.
+ Different template used for single document download
+ Directory checks for writing files combined into one File_Common
  function. 
+ Different placeholder graphic for those without permissions.


7 February 2008
+ Added ability to force users to resize their images.
+ convertMediaToFileAssoc added.
+ Added getSource function to return an association's source object
+ Added ability for dev to suppress image captions.
+ imageOnly can now be set to suppress random and folder options
+ documentOnly can now suppress folder option