@@ -1,5 +1,8 @@
 Version 2.0.0
 ----------------------------------------------------------------
+18 March 2008
++ Fixed bug in video thumbnailing.
+
 7 March 2008
 + Fixed fc_convert table check typo.
 + File classification made deity only
